<resources>
    <string name="app_name">PassTicketApp</string>
    <!-- Strings used for fragments for navigation -->
    <string name="ticket_fragment_label">Ticket Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="type">Type</string>
    <string name="day">Day</string>
    <string name="hour">Hour</string>
    <string name="validity_period">Validity Period</string>
    <string name="add">Add</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="group_day_pass">Day Pass</string>
    <string name="day_pass">%d Day Pass</string>
    <string name="group_hour_pass">Hour Pass</string>
    <string name="hour_pass">%d Hour Pass</string>
    <string name="unknown">Unknown</string>
    <string name="activated">Activated</string>
    <string name="unactivated">Unactivated</string>
    <string name="activate">Activate</string>
    <string name="expired">Expired</string>
    <string name="insertion_date">Insertion Date:</string>
    <string name="expiration_date">Expiration Date:</string>
    <string name="activation_date">Activation Date:</string>



    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>