...
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/gray10"
            app:layout_constraintLeft_toRightOf="@id/image_ticket"
            app:layout_constraintRight_toLeftOf="@id/text_title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/text_title"
            android:layout_width="0dp"
...
            android:maxLines="1"
            android:ellipsize="marquee"
            android:textColor="@color/gray90"
            android:textSize="24sp"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toRightOf="@id/view_divider"
            app:layout_constraintRight_toLeftOf="@id/button_activate"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:text="1-Day Pass"/>

        <TextView
            android:id="@+id/button_activate"
...
