...
            android:layout_height="wrap_content"
            android:checked="true"
            android:textSize="16sp"
            android:text="@string/day"/>

        <RadioButton
            android:id="@+id/radio_button_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/hour"/>

    </RadioGroup>
...
